# Worm-Gpt

./: .env  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  telegram_bot.py  web_server.py
