[project]
name = "zaren-ai"
version = "1.0.0"
description = "ZAREN AI 💀 - Unrestricted AI Assistant by McLarenXZAREN"
authors = [
    {name = "McLarenXZAREN", email = "your@email.com"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "telegram", "openai", "unrestricted"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "openai>=1.3.0",
    "python-telegram-bot>=20.7",
    "python-dotenv>=1.0.0",
    "flask>=2.3.3",
    "gunicorn>=21.2.0",
    "pandas>=2.1.1",
    "scikit-learn>=1.3.1",
    "colorama>=0.4.6",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
]

[project.scripts]
zaren = "main:main"
start = "web_server:start_server"

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
